--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -24,7 +24,7 @@ jobs:
           python-version: '3.11'
 
       # ADJUST THIS: install all dependencies (including pdoc)
-      - run: pip install -e .
+      - run: pip install -r requirements.txt
       - run: pdoc -o docs/ hsr_client
 
       - uses: actions/upload-pages-artifact@v1
