enable vscode type checking

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,4 +9,5 @@
     "python.testing.pytestEnabled": false,
     "python.testing.unittestEnabled": true,
     "python.formatting.provider": "black",
+    "python.analysis.typeCheckingMode": "basic",
 }
